[package]
name = "tomato_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.2.6"
x86_64 = "0.14.11"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none",
]
test-success-exit-code = 0x41
test-timeout = 300
